# manipulator_lerobot_plugin

./: README.md
lerobot_robot_openmanipulator_x/: pyproject.toml
lerobot_robot_openmanipulator_x/lerobot_robot_openmanipulator_x/: __init__.py  config_openmanipulator_x_follower.py  openmanipulator_x_follower.py
lerobot_robot_openmanipulator_x/lerobot_robot_openmanipulator_x.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lerobot_teleoperator_openmanipulator_x/: pyproject.toml
lerobot_teleoperator_openmanipulator_x/lerobot_teleoperator_openmanipulator_x/: __init__.py  config_openmanipulator_x_leader.py  openmanipulator_x_leader.py
lerobot_teleoperator_openmanipulator_x/lerobot_teleoperator_openmanipulator_x.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
